# SemiDGFEM

./: .gitignore  .readthedocs.yaml  ADVANCED_TRANSPORT_IMPLEMENTATION.md  CMakeLists.txt  COMPLETE_BACKEND_IMPLEMENTATION.md  COMPLETE_DG_BASIS_IMPLEMENTATION.md  COMPLETE_FRONTEND_INTEGRATION.md  COMPLETE_PYTHON_BINDINGS.md  COMPLEX_DEVICES_COMPLETE.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  finfet_mesh.geo  finfet_structure.json  gaa_structure.json  hbt_structure.json  hbt_summary.txt  quantum_well_device.json  run_modern_gui.py  run_realtime_comprehensive_mosfet_gui.py  test_docs_build.py  tunnel_fet.json  tunnel_fet_mesh.geo  validate_fixes.py
docs/: API_DOCUMENTATION.md  API_REFERENCE.md  API_Reference.md  DG_DISCRETIZATION_IMPLEMENTATION.md  DOCUMENTATION_COMPLETE.md  Developer_Guide.md  Feature_Documentation.md  Installation_Guide.md  README.md  RTD_DOCUMENTATION_COMPLETE.md  USER_GUIDE.md  User_Guide.md  advanced_transport_models.md  api_reference.md  boundary_condition_fixes.md  build_rtd.py  conf.py  generate_docs.py  heterostructure_analysis.md  implementation.rst  index.rst  installation.md  mathematical_formulation.rst  numerical_methods.rst  python_api.rst  quickstart.rst  requirements.txt  theory.rst  tutorials.rst  usage.rst  user_guide.md  validation.rst
docs/_static/: custom.css
docs/setup/: GITHUB_READTHEDOCS_SETUP.md  READTHEDOCS_IMPLEMENTATION_COMPLETE.md  READTHEDOCS_SETUP.md
docs/validation/: GPU_VALIDATION_COMPLETE.md
examples/: advanced_mosfet_simulation.py  advanced_transport_demo.cpp  complete_heterostructure_advanced_transport.py  complete_mosfet_advanced_transport.py  complete_mosfet_simulation.py  comprehensive_heterostructure_pn_diode.py  comprehensive_mosfet_validation.py  corrected_mosfet_demo.py  create_validation_visualization.py  demonstrate_improvements.py  detailed_mosfet_logs.py  generate_demo_plots.py  heterostructure_pn_diode.py  pn_junction_tutorial.py  realtime_comprehensive_mosfet_gui.py  realtime_heterostructure_pn_gui.py  run_complex_device_examples.py  run_validation_demo.py  simple_demo.py
frontend/: advanced_visualization.py  complete_frontend_integration.py  demo_complete_frontend.py  launch_complete_frontend.py
gui/: launch_gui.py  main_window.py  menu_methods.py  modern_mosfet_gui.py  mosfet_simulator_gui.py  run_gui.py  run_realtime_pn_diode_gui.py  simulation_methods.py
include/: advanced_device_structures.hpp  advanced_mesh_refinement.hpp  advanced_physics_models.hpp  advanced_transport.hpp  amr_algorithms.hpp  device.hpp  dg_assembly.hpp  dg_basis_functions.hpp  driftdiffusion.hpp  enhanced_visualization.hpp  gpu_acceleration.hpp  gpu_linear_solvers.hpp  machine_learning_integration.hpp  material_properties.hpp  mesh.hpp  performance_optimization.hpp  poisson.hpp  quantum_transport.hpp  self_consistent_solver.hpp  simple_dg.hpp  transient_solver.hpp
output/benchmark_results/: test_benchmark_results.json  test_benchmark_results_metrics.json
output/device_structures/: finfet_summary.txt
output/physics_data/: tutorial_visualization_session.json
performance/: gpu_kernel_validation.py  gpu_validation_suite.py  performance_analysis.py  performance_analysis_20250606_132050.json  performance_benchmark_suite.py  run_gpu_validation.py
python/: advanced_device_structures.py  advanced_mesh_refinement.py  advanced_physics_models.py  advanced_transport.py  advanced_transport.pyx  advanced_transport_simple.cpp  advanced_transport_simple.pyx  advanced_visualization.py  benchmark_results.json  benchmark_results_metrics.json  compile_all.py  compile_remaining_modules.py  complete_backend_implementation.py  complete_dg.cpp  complete_dg.pyx  complex_device_demonstration.py  complex_device_examples.py  comprehensive_benchmarks.py  comprehensive_integration_test.py  comprehensive_mosfet_test.py  comprehensive_validation.py  cuda_opencl_examples.py  debug_import.py  enhanced_performance_optimization.py  enhanced_simulator.py  enhanced_visualization.py  final_demo.py  final_dg_validation.py  final_integration_status.py  fixed_integration_test.py  fixed_validation_test.py  gpu_acceleration.py  gpu_acceleration_test.py  gpu_enhanced_solver.py  heterostructure_simulation.py  machine_learning_integration.py  minimal_test.py  mosfet_simulation.py  performance_bindings.cpp  performance_bindings.py  (+32 more)
python/gui/: main_gui_2d.py
python/visualization/: viz_2d.py
scripts/: validate_advanced_transport.sh
src/: advanced_device_structures.cpp  device.cpp  mesh.cpp
src/amr/: advanced_mesh_refinement.cpp  amr_algorithms.cpp  mesh_refinement_executor.cpp
src/dg_math/: dg_assembly.cpp  (+3 more)
tests/: CMakeLists.txt  analytical_validation.py  comprehensive_backend_frontend_tests.py  comprehensive_integration_validation.py  comprehensive_mosfet_test.py  comprehensive_testing_suite.py  fixed_backend_frontend_integration.py  minimal_test.cpp  mock_backend_interface.py  quick_validation_test.py  run_all_tests.py  simple_backend_test.cpp  test_advanced_device_structures.py  test_advanced_mesh_refinement.py  test_advanced_physics_models.py  test_advanced_transport.py  test_advanced_transport_cpp.cpp  test_boundary_conditions.py  test_complete_dg_basis.cpp  test_device.cpp  test_dg_demo.cpp  test_dg_discretization.cpp  test_enhanced_performance_optimization.py  test_enhanced_visualization.py  test_gpu_enhanced_acceleration.py  test_gui.py  test_gui_visibility.py  test_machine_learning_integration.py  test_mesh.cpp  test_python_simulator.py  test_quantum_transport.py  test_simple_dg_basis.cpp  test_unstructured_dg_complete.cpp  validate_backend_implementations.py  working_backend_test  working_backend_test.cpp  working_integration_test.py
tutorials/: 01_basic_simulator_tutorial.py  02_transient_simulation_tutorial.py  03_advanced_self_consistent_tutorial.py  advanced_device_structures_tutorial.py  advanced_mesh_refinement_tutorial.py  advanced_physics_models_tutorial.py  enhanced_performance_optimization_tutorial.py  enhanced_visualization_tutorial.py  machine_learning_integration_tutorial.py  quantum_transport_tutorial.py
(+34 files in other folders)
